# blues-metocean-lib

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  generate_lib.py  requirements-dev.txt  requirements-linux.txt  requirements-win.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml  python-publish.yml  sheduled_tests.yml
examples/: README.md  requirements.txt  test_ascii.py  test_contour.py  test_report.py  test_return_value.py
examples/normet/: README.md  create_wind_roses.py  simple_statistics.py
examples/scatter/: test_scatter.py
models/met/: Dataset.json  DatasetContainer.json  DatasetVariable.json
models/met/nora3/: Field.json  FieldPoint.json  WindArea.json
models/met/scatter/: Scatter.json  Sector.json  Wave.json  WindCurrent.json
src/: create_datasets.py  create_wind_roses.py  find_metadata.py  generate_lib.py
src/bluesmet/common/: latlon.py  scatter.py
src/bluesmet/met/: __init__.py  dataset.py  datasetcontainer.py  datasetvariable.py  package_info.py
src/bluesmet/met/blueprints/: dataset.py  datasetcontainer.py  datasetvariable.py
src/bluesmet/met/nora3/: __init__.py  field.py  fieldpoint.py  windarea.py
src/bluesmet/met/scatter/: __init__.py  scatter.py  sector.py  wave.py  windcurrent.py
src/bluesmet/metlib/: latlon.py  scatter.py
src/bluesmet/normet/: cache.py  combine.py  dataset.py  subset.py  values.py
src/bluesmet/normet/metengine/: extreme_stats.py
src/bluesmet/normet/nora3/: arome3km_3hr.py  mywavewam3km.py  read_waves.py  read_winds.py  (+2 more)
tests/: test_arome3km.py  test_mywavewam3km.py  test_norkyst.py  test_wavesub.py
(+11 files in other folders)
