[metadata]
name = bluesmet
# version = attr: my_package.VERSION
version = 0.3.1
author = SINTEF Ocean
description = SFI Blues Metocean Library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
tests_require = file: requirements-dev.txt

[options.packages.find]
where=src