[metadata]
name = bluesmet
version = 0.1.0.dev2
author = SINTEF Ocean
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir=
    =src
install_requires =
    requests==2.27.1
    tqdm==4.64.0
    dmtpy==0.3.0
    # Version 1.5.2 is needed since later versions are broken on Linux
    netCDF4==1.5.2
    numpy==1.23
    scipy==1.9.0
    python-dateutil==2.8.2
    windrose==1.8.1

[options.packages.find]
where=src

[options.extras_require]
dev = 
    pylint